--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -29,5 +29,6 @@
           uses: quarto-dev/quarto-actions/publish@v2
           with:
             target: gh-pages
+            path: "Bruce11151"
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
