--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,21 +1,8 @@
 project:
   type: website
 
-website:
-  title: "Bruce11151"
-  navbar:
-    left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
-
 format:
   html:
-    theme:
-      - cosmo
-      - brand
-    css: styles.css
-    toc: true
-
-
+    theme: cosmo
+    toc: false  
 
